Fix body blurred state

--- a/stylesheets/blurred.less
+++ b/stylesheets/blurred.less
@@ -36,3 +36,7 @@
   background-image: linear-gradient(#EFEFEF, #E3E3E3);
   border-top:1px solid #999;
 }
+
+body.is-blurred {
+  border-top:1px solid #B2B2B2;
+}
